--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="src/assets/fontawesome/css/solid.css" rel="stylesheet" />
 </head>
 
-<body class="font-poppins h-screen">
+<body class="font-poppins">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
