--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LaRest</title>
+  <title>Larest</title>
   <link href="src/assets/fontawesome/css/fontawesome.css" rel="stylesheet" />
   <link href="src/assets/fontawesome/css/brands.css" rel="stylesheet" />
   <link href="src/assets/fontawesome/css/solid.css" rel="stylesheet" />
